--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,35 +1,11 @@
 .App {
   padding: 20px;
   margin-bottom: 200px;
-}
-
-.tab-list {
-  border-bottom: 1px solid #ccc;
-  padding-left: 0;
-}
-
-.tab-list-item {
-  display: inline-block;
-  list-style: none;
-  margin-bottom: -1px;
-  padding: 0.5rem 0.75rem;
-}
-
-.tab-list-active {
-  background-color: white;
-  border: solid #ccc;
-  border-width: 1px 1px 0 1px;
+  font-family: "Raleway", "Montserrat", "Lato", system-ui
 }
 
 Button {
   margin-bottom: 5px;
   margin-right: 5px;
   min-width: 156px;
-  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
-    Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-iframe {
-  border: 1px solid black;
 }
