--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -21,14 +21,22 @@
 
 .logo {
     text-align: center;
-    background-color: #12439B;
+    background-color: #0A167F;
 }
 
 .header {
     text-align: center;
 }
 
-.optional h6 {
+.new-client h6 {
     margin-top: 10px;
     margin-bottom: 2px;
+}
+
+.selection {
+    width: 10rem;
+}
+
+option{
+    color: black;
 }
